--- a/dvriptv.html
+++ b/dvriptv.html
@@ -94,7 +94,8 @@
 <script>
 document.write(unescape('%3C%73%63%72%69%70%74%3E%0A%20%20%63%6F%6E%73%74%20%70%6C%61%79%65%72%20%3D%20%76%69%64%65%6F%6A%73%28%27%74%61%74%61%70%6C%61%79%65%72%27%29%3B%0A%20%20%63%6F%6E%73%74%20%6D%33%75%55%72%6C%20%3D%20%22%68%74%74%70%73%3A%2F%2F%64%76%72%69%70%74%76%68%65%6C%70%73%2E%67%69%74%68%75%62%2E%69%6F%2F%4D%33%55%2F%6A%69%6F%70%6C%75%73%24%24%2E%6D%33%75%22%3B%0A'));
 
-
+</script>
+  <script>
   let favs = JSON.parse(localStorage.getItem("favorites") || "[]");
   let pendingChannel = null;
   let adTimer = null;
