--- a/SVBC.html
+++ b/SVBC.html
@@ -68,10 +68,10 @@ const channels=[
     type:"youtube"
   },
   {
-    name:"SVBC HD",
-    logo:"https://i.ytimg.com/vi/W3KGDnFPUmI/hqdefault.jpg",
-    url:"https://www.youtube.com/live/W3KGDnFPUmI",
-    type:"m3u8"
+    name:"SRISAILA HD",
+    logo:"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQH9_tT11omgqCm0T30VlvuWLYO5dfRrs2_DUpDxiqXVg&s=10",
+    url:"https://www.youtube.com/live/YvZMk6OExUQ?si=XO1Zckqo9R8o51wA",
+    type:"youtube"
   }
 ];
 
