--- a/SVBC.html
+++ b/SVBC.html
@@ -63,7 +63,7 @@ let player;
 const channels=[
   {
     name:"SVBC HD",
-    logo:"https://i.ytimg.com/vi/W3KGDnFPUmI/hqdefault.jpg",
+    logo:"https://www.pngkit.com/png/detail/249-2496122_svbc-live-tirumala-tirupati-devasthanam-logo.png",
     url:"https://www.youtube.com/live/W3KGDnFPUmI",
     type:"youtube"
   },
