--- a/SVBC.html
+++ b/SVBC.html
@@ -63,7 +63,7 @@ let player;
 const channels=[
   {
     name:"SVBC HD",
-    logo:"https://www.pngkit.com/png/detail/249-2496122_svbc-live-tirumala-tirupati-devasthanam-logo.png",
+    logo:"https://static.wikia.nocookie.net/logopedia/images/a/a2/SVBC.jpg/revision/latest/scale-to-width-down/280?cb=20240319122808",
     url:"https://www.youtube.com/live/W3KGDnFPUmI",
     type:"youtube"
   },
