--- a/402dvriptv.html
+++ b/402dvriptv.html
@@ -1,116 +1,144 @@
 <!DOCTYPE html>
-<html lang="te">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DVR IPTV – Server Down</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      background: #0d1726;
-      font-family: Arial, sans-serif;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
-      text-align: center;
-    }
-    .logo {
-      width: 120px;
-      height: auto;
-      margin-bottom: 20px;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 1rem;
-      margin-bottom: 20px;
-      color: #ccc;
-      line-height: 1.5;
-    }
-    .card {
-      background: #162438;
-      border-radius: 10px;
-      padding: 20px;
-      margin: 10px 0;
-      width: 100%;
-      max-width: 600px;
-    }
-    .button, .link {
-      display: inline-block;
-      background: #1e90ff;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-      text-decoration: none;
-      margin: 5px;
-      font-size: .9rem;
-    }
-    .progress {
-      width: 100%;
-      height: 6px;
-      background: #2b3a53;
-      border-radius: 3px;
-      overflow: hidden;
-      margin-top: 10px;
-    }
-    .progress-bar {
-      width: 60%;
-      height: 100%;
-      background: linear-gradient(90deg, #1e90ff, #00c6ff);
-      animation: load 2s infinite alternate;
-    }
-    @keyframes load {
-      0% { width: 20%; }
-      100% { width: 90%; }
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>420 – Request Blocked</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+  * { box-sizing: border-box; margin: 0; padding: 0; }
+
+  body {
+    font-family: 'Poppins', sans-serif;
+    background: radial-gradient(circle at 10% 20%, #141e30 0%, #243b55 100%);
+    color: #fff;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .container {
+    text-align: center;
+    padding: 40px;
+    border-radius: 20px;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+    max-width: 500px;
+    width: 90%;
+    animation: fadeIn 1.2s ease forwards;
+  }
+
+  h1 {
+    font-size: 6rem;
+    background: linear-gradient(135deg, #ff6b6b, #feca57);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 10px;
+    animation: glow 2s ease-in-out infinite alternate;
+  }
+
+  @keyframes glow {
+    from { text-shadow: 0 0 10px rgba(255,107,107,0.4); }
+    to { text-shadow: 0 0 20px rgba(254,202,87,0.8); }
+  }
+
+  h2 {
+    font-size: 1.6rem;
+    margin-bottom: 12px;
+    color: #dfe6e9;
+  }
+
+  p {
+    font-size: 0.95rem;
+    color: #b2bec3;
+    margin-bottom: 25px;
+  }
+
+  .btns {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    flex-wrap: wrap;
+  }
+
+  a.btn {
+    text-decoration: none;
+    padding: 10px 18px;
+    border-radius: 12px;
+    background: linear-gradient(135deg, #ff6b6b, #feca57);
+    color: #141e30;
+    font-weight: 600;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
+
+  a.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 6px 16px rgba(255,107,107,0.3);
+  }
+
+  .info {
+    margin-top: 25px;
+    font-size: 0.8rem;
+    color: #95a5a6;
+  }
+
+  /* Floating particle background */
+  .bubble {
+    position: absolute;
+    border-radius: 50%;
+    opacity: 0.3;
+    animation: float 10s infinite ease-in-out;
+  }
+
+  @keyframes float {
+    0% { transform: translateY(0); opacity: 0.3; }
+    50% { transform: translateY(-80px); opacity: 0.6; }
+    100% { transform: translateY(0); opacity: 0.3; }
+  }
+
+  .bubble:nth-child(1) { width: 120px; height: 120px; background: #ff6b6b; top: 15%; left: 10%; animation-delay: 0s; }
+  .bubble:nth-child(2) { width: 80px; height: 80px; background: #feca57; top: 70%; left: 80%; animation-delay: 2s; }
+  .bubble:nth-child(3) { width: 60px; height: 60px; background: #48dbfb; top: 40%; left: 60%; animation-delay: 4s; }
+  .bubble:nth-child(4) { width: 100px; height: 100px; background: #1dd1a1; top: 80%; left: 25%; animation-delay: 1s; }
+
+  @keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  @media (max-width: 500px) {
+    h1 { font-size: 4rem; }
+  }
+</style>
 </head>
 <body>
 
-  <!-- Logo -->
-  <img src="https://iili.io/K57a9hF.png" alt="DVR IPTV Logo" class="logo">
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
 
-  <!-- Main Heading -->
-  <h1>సర్వర్ డౌన్ — దయచేసి కాసేపు వేచి ఉండండి 🙏</h1>
-  <p>మేము సర్వర్ నిర్వహణ పనులు చేస్తున్నాము.<br>
-     మీ డేటా సురక్షితంగా ఉంది — కొంతసేపు సహనం వహించండి.</p>
-
-  <!-- Working on it card -->
-  <div class="card">
-    <h3>పనిలో ఉన్నాము</h3>
-    <p>కొద్ది సమయంలో మళ్లీ అందుబాటులోకి వస్తాము. మీ సహనానికి ధన్యవాదాలు.</p>
-    <a href="#" class="button">Auto-retry ప్రారంభించబడింది</a>
-    <a href="https://t.me/+CZJAIld_ID28wY2I1" class="link">మా Telegram ఛానెల్</a>
-    <div class="progress"><div class="progress-bar"></div></div>
+  <div class="container">
+    <h1>420</h1>
+    <h2>Request Blocked / Enhance Your Calm 😌</h2>
+    <p>Server ki chala fast requests pampinattu undi.  
+       Konchem relax ayyi, kontha time tarvata malli try cheyyandi!</p>
+    <div class="btns">
+      <a href="https://tataplays.site/" class="btn">🏠 Home</a>
+      <a href="#" class="btn" onclick="location.reload()">🔁 Retry</a>
+    </div>
+    <div class="info">
+      Error Code: <b>420</b> | Generated at: <span id="time"></span>
+    </div>
   </div>
 
-  <!-- Scheduled Maintenance -->
-  <div class="card">
-    <h3>ప్రణాళికాబద్ధమైన నిర్వహణ</h3>
-    <p>సర్వర్ అప్‌డేట్ కారణంగా కొంత విరామం ఉంది. త్వరలో పూర్తవుతుంది.</p>
-  </div>
-
-  <!-- Stay Connected -->
-  <div class="card">
-    <h3>కానెక్ట్‌డ్‌గా ఉండండి</h3>
-    <p>తాజా సమాచారం కోసం మా సోషల్ మీడియా పేజీలను చూడండి.</p>
-  </div>
-
-  <!-- Thanks -->
-  <div class="card">
-    <h3>మీ సహనానికి ధన్యవాదాలు</h3>
-    <p>మేము త్వరలోనే తిరిగి వస్తాము.</p>
-  </div>
+<script>
+  // Display current time dynamically
+  document.getElementById('time').textContent = new Date().toLocaleString();
+</script>
 
 </body>
 </html>
