--- a/jioazeenew2.html
+++ b/jioazeenew2.html
@@ -78,7 +78,7 @@ let currentUrl = "";
 
 async function loadM3U() {
   try {
-    const m3uUrl = "https://venkatmitv0-byte.github.io/Azee/doddi.m3u";
+    const m3uUrl = "https://teachub.strangled.net/JIO/app/tsjio_playlist.m3u";
     const response = await fetch(m3uUrl);
     const text = await response.text();
 
@@ -199,4 +199,5 @@ document.addEventListener("DOMContentLoaded", loadM3U);
 </body>
 
 </html>
+
 
