--- a/jioazeenew2.html
+++ b/jioazeenew2.html
@@ -78,7 +78,7 @@ let currentUrl = "";
 
 async function loadM3U() {
   try {
-    const m3uUrl = "https://teachub.strangled.net/JIO/app/tsjio_playlist.m3u";
+    const m3uUrl = "https://game.denver1769.fun/Jtv/pde1nc/Platlist.m3u";
     const response = await fetch(m3uUrl);
     const text = await response.text();
 
@@ -199,5 +199,6 @@ document.addEventListener("DOMContentLoaded", loadM3U);
 </body>
 
 </html>
+
 
 
