--- a/jioazeenew2.html
+++ b/jioazeenew2.html
@@ -78,7 +78,7 @@ let currentUrl = "";
 
 async function loadM3U() {
   try {
-    const m3uUrl = "https://dvriptvhelps.github.io/M3U/dodditv.m3u";
+    const m3uUrl = "http://192.0.0.2:8005/app/tsjio_playlist.m3u";
     const response = await fetch(m3uUrl);
     const text = await response.text();
 
@@ -199,6 +199,7 @@ document.addEventListener("DOMContentLoaded", loadM3U);
 </body>
 
 </html>
+
 
 
 
